Readd border context menu

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -43,5 +43,11 @@
             <Canvas Grid.Row="4" Grid.Column="1" Height="210" Width="150" Background="White" Margin="10"/>
        
         </Grid> 
+        
+        <Border.ContextMenu>
+            <ContextMenu>
+                <MenuItem Header="Exit" Click="Exit_Click"/>
+            </ContextMenu>
+        </Border.ContextMenu>
     </Border>
 </Window>
