--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -24,14 +24,14 @@
                 <RowDefinition Height="Auto" /> 
             </Grid.RowDefinitions> 
             
-            <Canvas Grid.Row="0" Grid.Column="0" Height="210" Width="150" Background="White" Margin="10"/>
+            <Canvas Name="Dealer1Canvas" Grid.Row="0" Grid.Column="0" Height="210" Width="150" Background="White" Margin="10"/>
             <Canvas Grid.Row="0" Grid.Column="1" Height="210" Width="150" Background="White" Margin="10"/>
 
             <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" x:Name="DealerCounterDisplay" 
                        Text="0" Foreground="White" FontSize="50" FontWeight="Bold" 
                        HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,10"/>
             
-            <Button Grid.Row="2" Grid.Column="0" Height="30" Width="90" BorderThickness="4">Hit</Button>
+            <Button Grid.Row="2" Grid.Column="0" Height="30" Width="90" BorderThickness="4" Click="Load_Card">Hit</Button>
             <Button Grid.Row="2" Grid.Column="1" Height="30" Width="90" BorderThickness="4">Pass</Button>
 
             
