--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -32,7 +32,7 @@
                        HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,10"/>
             
             <Button Grid.Row="2" Grid.Column="0" Height="30" Width="90" BorderThickness="4" Click="Init_Dealer_And_Player_Card">Start</Button>
-            <Button Grid.Row="2" Grid.Column="1" Height="30" Width="90" BorderThickness="4">Pass</Button>
+            <Button Grid.Row="2" Grid.Column="1" Height="30" Width="90" BorderThickness="4" Click="Hit_Player_Card">Pass</Button>
 
             
             <TextBlock Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" x:Name="PlayerCounterDisplay" 
