--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -27,15 +27,17 @@
             <Canvas Name="DealerCanvas1" Grid.Row="0" Grid.Column="0" Height="210" Width="150" Background="White" Margin="10"/>
             <Canvas Name="DealerCanvas2" Grid.Row="0" Grid.Column="1" Height="210" Width="150" Background="White" Margin="10"/>
 
-            <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" x:Name="DealerCounterDisplay" 
+            <TextBlock Name="DealerCounter" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"  
                        Text="0" Foreground="White" FontSize="50" FontWeight="Bold" 
                        HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,10"/>
             
-            <Button Grid.Row="2" Grid.Column="0" Height="30" Width="90" BorderThickness="4" Click="Init_Dealer_And_Player_Card">Start</Button>
-            <Button Grid.Row="2" Grid.Column="1" Height="30" Width="90" BorderThickness="4" Click="Hit_Player_Card">Pass</Button>
-
+            <StackPanel Name="ButtonStackPanel" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Button Height="30" Width="90" Margin="5,0,5,0" BorderThickness="4" Click="Init_Dealer_And_Player_Card">Start</Button>
+                <Button Height="30" Width="90" Margin="5,0,5,0" BorderThickness="4" Click="Hit_Player_Card">Pass</Button>
+                <Button Height="30" Width="90" Margin="5,0,5,0" BorderThickness="4" Click="Hit_Player_Card">Reset</Button>
+            </StackPanel>
             
-            <TextBlock Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" x:Name="PlayerCounterDisplay" 
+            <TextBlock Name="PlayerCounter" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" 
                        Text="0" Foreground="White" FontSize="50" FontWeight="Bold" 
                        HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,10"/>
             
